--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "@sahibzada/use-cudo-toggle",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "use cudo toggle",
   "main": "use-cudo-toggle.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/smusman437/use-cudo-toggle-npm-package.git"
   },
   "author": "Sahibzada Muhammad Usman",
   "license": "ISC",
